--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/Maps/InfiniteLabyrinth.InfiniteLabyrinth
 
 
 EditorStartupMap=/Game/Maps/InfiniteLabyrinth.InfiniteLabyrinth
+GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
