--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,11 +1,11 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/InfiniteLabyrinth.InfiniteLabyrinth
+GameDefaultMap=/Game/Maps/PointAndClick.PointAndClick
 
 
-EditorStartupMap=/Game/Maps/InfiniteLabyrinth.InfiniteLabyrinth
-GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
+EditorStartupMap=/Game/Maps/PointAndClick.PointAndClick
+GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
